# agent-demo

./: .gitignore  AGENTS.md  LICENSE  README.md  guard-mock.mjs
app/agent/: README.md  analysis.py  main.py  managed_model.py  pyproject.toml  seller_core.py  signing.py  studio.toml
buyer-client/: .env.example  README.md  package-lock.json  package.json
buyer-client/src/: erc8183.ts  gateway.ts  index.ts  negotiate.ts  pdf-report.ts  uomp.ts  x402.ts  x402free.ts
buyer-client/src/abi/: commerce.ts  erc20.ts  policy.ts  router.ts
stockanalyst/: .gitignore  README.md  pyproject.toml  test_e2e.py
stockanalyst/.github/workflows/: ci.yml  deploy.yml
stockanalyst/app/agent/: .gitignore  README.md  agent_card.py  analysis.py  data_sources.py  executor.py  main.py  pyproject.toml  report_renderer.py  report_schema.py  seller_core.py  signing.py  studio.toml  tools.py  uomp_storage.py  x402_handler.py  x402_verify.py
