[project]
name = "stockanalyst-agent"
version = "0.1.0"
description = "The stockanalyst Agent (sole signer, value layer)."
requires-python = ">=3.10"
dependencies = [
    # bnbagent-studio-core resolves from PyPI via the pin below. Working from a
    # studio SOURCE checkout instead? Install that core editable
    # (pip install -e /path/to/.../bnbagent-studio-core) BEFORE
    # `pip install -e ./agent`, and `bag init`/`bag deploy agent` vendor a wheel
    # of it into ./wheels/ (surfaced via [tool.uv.pip] find-links below) so the
    # CDK packaging path (`uv pip install -r pyproject.toml`) ships the same
    # local source in the CodeZip.
    "bnbagent-studio-core>=0.0.5,<0.1",
    "bnbagent>=0.4.0",
    "google-adk>=1.34",
    "litellm>=1.89,<2",
    "aws-opentelemetry-distro>=0.10.0",
    "boto3>=1.34",
    "bedrock-agentcore[a2a]>=1.9,<2.0",
    "a2a-sdk>=0.3,<1.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "requests>=2.28",
    "fredapi>=0.3.12",
    "newsapi-python>=0.2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Dev-override wheel source for bnbagent-studio-core. ADDITIVE: the version pin
# above is unchanged and resolves from PyPI when ./wheels/ is empty or absent;
# when `bag init`/`bag deploy agent` vendored a wheel of a local source checkout
# here, its content-hash local version sorts above the PyPI release so the deploy
# CodeZip ships the local source. Plain `pip` ignores this table — it is uv-only,
# which is exactly what the AgentCore CDK packager uses.
[tool.uv.pip]
find-links = ["./wheels"]
